arrumando bug overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,8 @@
 @use 'footer';
 @use 'components/infos-bar';
 @use 'components/button';
-*{
+*{  
+    
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -14,6 +15,7 @@
     list-style: none;
 }
 body{
+    overflow-x: hidden;
     background-color:variables.$red;
 }
 .container{
